file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(INCLUDE_PUB_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include_pub)

if(BUILD_SHARED_LIBS)
    add_library(privmxendpointsql SHARED ${SOURCES})
else()
    add_library(privmxendpointsql STATIC ${SOURCES})
endif()
target_include_directories(privmxendpointsql PUBLIC ${INCLUDE_DIRS} PUBLIC ${INCLUDE_PUB_DIRS})
target_compile_options(privmxendpointsql PRIVATE -fPIC -Wall -Wextra -Wno-narrowing)
target_link_libraries(privmxendpointsql PRIVATE Poco::Foundation privmx privmxendpointcore privmxendpointstore privmxendpointkvdb privmxendpointsearch SQLite::SQLite3)
if(BUILD_SHARED_LIBS)
    set_target_properties(privmxendpointsql PROPERTIES POSITION_INDEPENDENT_CODE True)
endif()
install(TARGETS privmxendpointsql DESTINATION lib)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include_pub/privmx DESTINATION include)
if(PRIVMX_INSTALL_PRIVATE_HEADERS)
    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/privmx DESTINATION include)
endif()
if(PRIVMX_WERROR)
    target_compile_options(privmxendpointsql PRIVATE -Werror)
endif()
set_target_properties(privmxendpointsql PROPERTIES COMPILE_DEFINITIONS "MINIMAL_BUILD")