
option(PRIVMX_BUILD_WITH_WEBRTC "Build Stream module with additional layer of the native WebRTC library" OFF)
if(PRIVMX_BUILD_WITH_WEBRTC)
    option(PRIVMX_IMPORT_LIBWEBRTC "Manually IMPORT libwebrtc provided by package manager" OFF)
    if(PRIVMX_IMPORT_LIBWEBRTC)
        message(STATUS  "Using IMPORTED libwebrtc library")
        message(STATUS  "path to libWEBRTC lib PRIVMX_LIBWEBRTC=${PRIVMX_LIBWEBRTC}")
        message(STATUS  "path to libWEBRTC includes PRIVMX_LIBWEBRTC_INCLUDE=${PRIVMX_LIBWEBRTC_INCLUDE}")
    else()
        message(STATUS  "Using prebuild WelibwebrtcbRTC library")
    endif()
endif()

add_subdirectory(stream)
if(PRIVMX_BUILD_WITH_WEBRTC)
    add_subdirectory(webrtc)
    list(APPEND LIBS privmxendpointstream_webrtc)
endif()

if(BUILD_SHARED_LIBS)
    add_library(privmxendpointstream SHARED)
else()
    add_library(privmxendpointstream STATIC)
endif()
target_compile_options(privmxendpointstream PRIVATE -Wall -Wextra -fPIC)
target_link_libraries(privmxendpointstream PRIVATE Poco::Foundation privmx privmxendpointcore PUBLIC privmxendpointstream_stream ${LIBS})
if(BUILD_SHARED_LIBS)
    set_target_properties(privmxendpointstream PROPERTIES POSITION_INDEPENDENT_CODE True)
endif()
install(TARGETS privmxendpointstream DESTINATION lib)
if(PRIVMX_WERROR)
    target_compile_options(privmxendpointstream PRIVATE -Werror)
endif()
set_target_properties(privmxendpointstream PROPERTIES COMPILE_DEFINITIONS "MINIMAL_BUILD")
