# file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
# add_library(privmxrpc OBJECT ${SOURCES})
# target_include_directories(privmxrpc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
# target_compile_options(privmxrpc PRIVATE -Wall -Wextra -Wno-narrowing)
# target_link_libraries(privmxrpc PUBLIC Poco::Foundation Poco::Net Poco::NetSSL privmxutils privmxcrypto privmxpki)
# if(BUILD_SHARED_LIBS)
#     set_target_properties(privmxrpc PROPERTIES POSITION_INDEPENDENT_CODE True)
# endif()
# install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/privmx DESTINATION include)
# if(PRIVMX_WERROR)
#     target_compile_options(privmxrpc PRIVATE -Werror)
# endif()
